--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
     "trailingComma": "es5",
     "endOfLine": "auto",
     "printWidth": 120,
-    "semi": false
+    "semi": false,
+    "bracketSpacing": true,
+    "singleAttributePerLine": true
 }
