--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "lint-staged": {
     "src/**/*.js": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write --ignore-unknown"
     ]
   },
   "browserslist": {
