--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,7 @@
       "es2021": true
     },
     "ignorePatterns": ["node_modules", "dist", "build"],
-    "extends": [
-      "eslint:recommended",
-      "airbnb",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:import/errors",
-      "plugin:import/warnings"
-    ],
+    "extends":"airbnb",
     "parserOptions": {
       "ecmaFeatures": {
         "jsx": true
